Basic auth added, No Refresh token

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "ToDoAppDatabase": "Host=localhost;Database=ToDoDb;Username=postgres;Password=1q2w3e4r;TrustServerCertificate=true;"
   },
-  "AllowedHosts": "*"
+
+  "JwtSettings": {
+    "SecretKey": "BuCokGizliVeUzunBirAnahtarOlmalı123!",
+    "Issuer": "ToDoApp",
+    "Audience": "ToDoAppUsers",
+    "ExpiryMinutes": 60
+  }
 }
